--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
                 <optional>true</optional>
         </dependency>
 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
